#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([src/helloworld.c])
#AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(helloworld,1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

AC_ARG_WITH(
    [libpcap],
    [  --with-libpcap=PATH     Specify path to libpcap installation],
    [
    if test "x$withval" != "xno"; then
        CPPFLAGS="-I$withval/include $CPPFLAGS"
        LDFLAGS="-L$withval/lib $LDFLAGS"
    fi
    ]
)

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lpcap':
AC_CHECK_LIB([pcap], [pcap_lookupnet], [LIBS="-lpcap $LIBS"],
    [AC_MSG_ERROR([libpcap not found])]
)


# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h netinet/in.h stdlib.h sys/socket.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([inet_ntoa])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
